# blur_recognition

./: CMakeLists.txt  gitignore  test.cpp
include/: CMakeLists.txt  feature.h  model.h
src/: CMakeLists.txt  feature.cpp  model.cpp
xgboost/: CMakeLists.txt
